fixed image size overlap and added notes

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,13 @@ ul {
   outline: #3B0B0B dotted thick;
   transition: 0.75s;
   opacity: 1;
+  width: 80%;
+  height: 80%;
+}
+
+.pigTile img {
+  width: 80%;
+  height: 80%;
 }
 
 .minBackgroundSneak {
